--- a/src/style/index.css
+++ b/src/style/index.css
@@ -2,3 +2,12 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+html,
+body {
+	@apply w-screen h-screen;
+
+	#app {
+		@apply w-full h-full;
+	}
+}
